fix(Shift): Layout Shift

--- a/styles.scss
+++ b/styles.scss
@@ -57,15 +57,13 @@
     box-shadow: 0 0 15px 10px rgba(42, 75, 160, 0.63);
   }
 }
-html {
+
+body {
   background: url("assets/bg.svg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-}
-
-body {
   color: white;
 
   overflow: hidden;
@@ -560,7 +558,7 @@ aside {
   .container {
     padding: 0 20px;
     scroll-snap-type: none;
-    // overflow-y: auto;
+    overflow-y: auto;
   }
 
   header {
